# scener_server

./: .gitignore  Makefile  README.md  config.json  environment-5090.yml  environment-rest.yml  install.sh  pyproject.toml  requirements.txt  test.sh
asset_db/: chroma.sqlite3
doc/: .~lock.use_case.ods#
doc/old/: chat.py  chatbot.py  decomposer.py  function.py
doc/old/deprecated/: llm0.py  mediator0.py
doc/old/misc/: client_old.cs  function.py  mediapipe0.py
doc/old/server/: client.py  input.py
doc/old/todo/: planner.py
doc/todo/: planner.py
media/: database.db
sdk/: scene.py
src/: __main__.py  lib.py  main.py
src/Scener.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/agent/: __init__.py  __main__.py  agent.py  agent_tools.py  api.py  improver.py  lib.py  mediator.py  test.py
src/agent/agent/: llm.py  mediator.py
src/agent/llm/: chat.py  creation.py  format.py  interaction.py  model.py  tooling.py
src/agent/tools/: __init__.py  browsing.py  calculator.py  date.py  decomposer.py  generate_image.py  gesture.py  image_to_skeleton.py  improver.py  library.py  scene.py  speech_to_text.py  tests.py  vision.py
src/core/: session.py  truc.py
src/gesture/: dynamic.py  hand.py  image.py  mediapipe.py  utils.py
src/media/: database.db
src/model/: __init__.py  black_forest.py  hunyuan.py  stable_diffusers.py  trellis.py
src/model/generation/: black_forest.py
src/model/llm/: agent.py  decomposer.py  improver.py  scene.py  tests.py
src/scene/: scene.py  test_scene.py
src/sdk/: messages.py  patch.py  scene.py
src/sdk/protobuf/: message.proto  message_pb2.py
src/server/: __init__.py  __main__.py  api.py  client.py  io.py  server.py  session.py  valider.py  websocket.py
src/server/data/: chat.py  data.py  message.py  redis.py  valider.py
src/server/io/: input.py  output.py  queue.py  valider.py
src/server/protobuf/: message.proto  (+3 more)
src/utils/: __init__.py  config.py  environment.py  image.py  json.py  logger.py
test/server/: client.py  test_message.py  test_websocket.py
tests/agent/: tests.py
tests/fonctionnal/: agent_tool_date.py  agent_tool_library.py
tests/functional/: load_image.py
tests/server/: test_message.py  tests.py
(+28 files in other folders)
