[project]
name = "Scener"
version = "0.1.0"
description = "3D scene generation interface"
dependencies = [
    "beartype>=0.20.2",
    "colorama>=0.4.4",
    "diffusers>=0.33.1",
    "huggingface_hub>=0.30.2",
    "imageio>=2.37.0",
    "langchain>=0.3.25",
    "langchain_community>=0.3.23",
    "langchain_core>=0.3.58",
    "langchain_ollama>=0.3.2",
    "langgraph>=0.4.1",
    "loguru>=0.7.3",
    "ollama>=0.4.8",
    "Pillow>=11.2.1",
    "pydantic>=2.11.4",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
    "torch>=2.6.0",
    "websockets>=15.0.1",
    "diffusers>=0.17.0",
    "transformers>=4.30.0",
    "accelerate>=1.6.0",
]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
