[project]
name = "Scener"
version = "0.1.0"
description = "3D scene generation interface"

requires-python = "==3.10.*"

dependencies = [
    "beartype==0.22.2",
    "colorama==0.4.6",
    "diffusers==0.35.1",
    "easydict==1.13",
    "gradio==5.49.0",
    "gradio_litmodel3d==0.0.1",
    "huggingface_hub==0.35.3",
    "imageio==2.37.0",
    "ipywidgets==8.1.7",
    "langchain==0.3.27",
    "langchain_community==0.3.30",
    "langchain_core==0.3.78",
    "langchain_ollama==0.3.10",
    "langgraph==0.6.8",
    "loguru==0.7.3",
    "matplotlib==3.10.6",
    "numpy==2.3.3",
    "objaverse==0.1.7",
    "open3d==0.19.0",
    "pandas==2.3.3",
    "pillow==11.3.0",
    "plyfile==1.1.2",
    "protobuf==6.32.1",
    "pydantic==2.11.10",
    "pytest==8.4.2",
    "python_igraph==0.11.9",
    "pyvista==0.46.3",
    "rembg==2.0.67",
    "requests==2.32.5",
    "safetensors==0.6.2",
    "scipy==1.16.2",
    "tenacity==9.1.2",
    "tqdm==4.67.1",
    "transformers==4.57.0",
    "trimesh==4.8.3",
    "utils3d==0.1.3",
    "websockets==15.0.1",
]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
